Adicionando mais detalhes no meu projeto portifolio

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <h2>Pedro Henrique Bento Severino</h2>
         <section class="cabecalho">
-            <h5><a class="textHeader" href="Home.html">Home</a></h5>
-            <h5><a class="textHeader" href="AboutMe.html">About Me</a></h5>
+            <h5><a class="textHeader" href="index.html">Home</a></h5>
+            <h5><a class="textHeader" href="aboutMe.html">About Me</a></h5>
             <h5><a class="textHeader" href="Contact.html">Contact</a></h5>
             <a id="WhatsApp" href="Contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                     viewBox="0 0 24 24" fill="currentColor"
