Aperfeiçoando um pouco mais meu portfolio pessoal

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -48,8 +48,11 @@
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia hic consectetur libero magnam omnis? Blanditiis autem animi cumque nostrum suscipit dicta, aspernatur hic atque nesciunt architecto nisi et ullam placeat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, aspernatur ullam! Iusto impedit enim maxime accusamus esse, minima amet eos ea debitis possimus accusantium facilis assumenda numquam perferendis recusandae fugit!</p>
     </div>
-    <div id="iPhone">
+    <div id="perfil">
         
     </div>
+    <footer>
+        <h2>© 2025 Pedro Henrique - Todos os direitos reservados</h2>
+    </footer>
 </body>
 </html>
