--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="cards">
 
             <div class="info">
-                <img src="img/about.jpg" alt="Sobre mim">
+                <!-- <img src="img/about.jpg" alt="Sobre mim"> -->
                 <h1>About Me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugit est mollitia dolore reiciendis
                     provident, voluptas veniam maxime ad, commodi quos, vitae repellendus perspiciatis culpa dolorem ut
@@ -66,7 +66,7 @@
             </div>
 
             <div class="info">
-                <img src="img/skills.jpg" alt="Habilidades">
+                <!-- <img src="img/skills.jpg" alt="Habilidades"> -->
                 <h1>My skills</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quia magnam eum. Veritatis iusto
                     praesentium adipisci pariatur, placeat voluptate, sit a quisquam delectus blanditiis maiores
@@ -76,7 +76,7 @@
             </div>
 
             <div class="info">
-                <img src="img/experience.webp" alt="Experiência">
+                <!-- <img src="img/experience.webp" alt="Experiência"> -->
                 <h1>Experiences</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus iusto recusandae ratione earum
                     perspiciatis quam odio cum voluptatibus. Atque quasi enim, quod minus commodi facere inventore
@@ -86,7 +86,7 @@
             </div>
 
             <div class="info">
-                <img src="img/contato.jpg" alt="Redes">
+                <!-- <img src="img/contato.jpg" alt="Redes"> -->
                 <h1>Contact Me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam reiciendis et assumenda eius minima
                     impedit corrupti ratione numquam aliquam est laudantium, velit quidem perspiciatis, placeat eaque
@@ -96,7 +96,9 @@
 
             </div>
         </div>
-
+        <footer>
+            <h2>© 2025 Pedro Henrique - Todos os direitos reservados</h2>
+        </footer>
     </main>
 </body>
 
