--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
             <div class="info">
                 <!-- <img src="img/about.jpg" alt="Sobre mim"> -->
                 <h1>About Me</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque fugit est mollitia dolore reiciendis
-                    provident, voluptas veniam maxime ad, commodi quos, vitae repellendus perspiciatis culpa dolorem ut
-                    eaque facilis quis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat deserunt
-                    provident, cumque cupiditate officiis voluptate, repellendus aspernatur perspiciatis veniam commodi,
-                    dolorem natus optio praesentium voluptatum reiciendis aperiam saepe omnis blanditiis.</p>
+                <p>Me chamo Pedro Henrique Bento Severino e tenho 18 anos. Estou cursando o curso de nível superior, Análise e desenvolvimento de Sistemas, no momento estou no segundo semestre.
+                    Pretendo trabalhar na área de desenvolvedor de sites ou banco de dados.
+                </p>
             </div>
 
             <div class="info">
