--- a/aboutMe.html
+++ b/aboutMe.html
@@ -43,14 +43,18 @@
     </section>
 </header>
 <body>
-    <div id="cardAbout">
-        <h1>About Me</h1>
+    <section>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia hic consectetur libero magnam omnis? Blanditiis autem animi cumque nostrum suscipit dicta, aspernatur hic atque nesciunt architecto nisi et ullam placeat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, aspernatur ullam! Iusto impedit enim maxime accusamus esse, minima amet eos ea debitis possimus accusantium facilis assumenda numquam perferendis recusandae fugit!</p>
-    </div>
-    <div id="perfil">
-        
-    </div>
+        <div id="cardAbout">
+            <ul>Pedro</ul>
+            <ul>Henrique</ul>
+        </div>
+        <div id="perfil">
+            <h1>About Me</h1>
+            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia hic consectetur libero magnam omnis? Blanditiis autem animi cumque nostrum suscipit dicta, aspernatur hic atque nesciunt architecto nisi et ullam placeat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, aspernatur ullam! Iusto impedit enim maxime accusamus esse, minima amet eos ea debitis possimus accusantium facilis assumenda numquam perferendis recusandae fugit!</p>
+        </div>
+    </section>
     <footer>
         <h2>© 2025 Pedro Henrique - Todos os direitos reservados</h2>
     </footer>
