--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,14 +13,14 @@
         <h5><a class="textHeader" href="index.html">Home</a></h5>
         <h5><a class="textHeader" href="AboutMe.html">About Me</a></h5>
         <h5><a class="textHeader" href="Contact.html">Contact</a></h5>
-        <a id="WhatsApp" href="Contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+        <a id="WhatsApp" target="_blank" href="https://wa.link/wuxgn5"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                 viewBox="0 0 24 24" fill="currentColor"
                 class="icon icon-tabler icons-tabler-filled icon-tabler-brand-whatsapp">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <path
                     d="M18.497 4.409a10 10 0 0 1 -10.36 16.828l-.223 -.098l-4.759 .849l-.11 .011a1 1 0 0 1 -.11 0l-.102 -.013l-.108 -.024l-.105 -.037l-.099 -.047l-.093 -.058l-.014 -.011l-.012 -.007l-.086 -.073l-.077 -.08l-.067 -.088l-.056 -.094l-.034 -.07l-.04 -.108l-.028 -.128l-.012 -.102a1 1 0 0 1 0 -.125l.012 -.1l.024 -.11l.045 -.122l1.433 -3.304l-.009 -.014a10 10 0 0 1 1.549 -12.454l.215 -.203a10 10 0 0 1 13.226 -.217m-8.997 3.09a1.5 1.5 0 0 0 -1.5 1.5v1a6 6 0 0 0 6 6h1a1.5 1.5 0 0 0 0 -3h-1l-.144 .007a1.5 1.5 0 0 0 -1.128 .697l-.042 .074l-.022 -.007a4.01 4.01 0 0 1 -2.435 -2.435l-.008 -.023l.075 -.041a1.5 1.5 0 0 0 .704 -1.272v-1a1.5 1.5 0 0 0 -1.5 -1.5" />
             </svg></a>
-        <a id="linkdln" href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+        <a id="linkdln" target="_blank" href="https://www.linkedin.com/in/pedro-henrique-442b232b5/"><svg xmlns="https://www.linkedin.com/in/pedro-henrique-442b232b5/" width="24" height="24" viewBox="0 0 24 24"
                 fill="currentColor" class="icon icon-tabler icons-tabler-filled icon-tabler-brand-linkedin">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <path
@@ -32,7 +32,7 @@
                 <path
                     d="M5.315 2.1c.791 -.113 1.9 .145 3.333 .966l.272 .161l.16 .1l.397 -.083a13.3 13.3 0 0 1 4.59 -.08l.456 .08l.396 .083l.161 -.1c1.385 -.84 2.487 -1.17 3.322 -1.148l.164 .008l.147 .017l.076 .014l.05 .011l.144 .047a1 1 0 0 1 .53 .514a5.2 5.2 0 0 1 .397 2.91l-.047 .267l-.046 .196l.123 .163c.574 .795 .93 1.728 1.03 2.707l.023 .295l.007 .272c0 3.855 -1.659 5.883 -4.644 6.68l-.245 .061l-.132 .029l.014 .161l.008 .157l.004 .365l-.002 .213l-.003 3.834a1 1 0 0 1 -.883 .993l-.117 .007h-6a1 1 0 0 1 -.993 -.883l-.007 -.117v-.734c-1.818 .26 -3.03 -.424 -4.11 -1.878l-.535 -.766c-.28 -.396 -.455 -.579 -.589 -.644l-.048 -.019a1 1 0 0 1 .564 -1.918c.642 .188 1.074 .568 1.57 1.239l.538 .769c.76 1.079 1.36 1.459 2.609 1.191l.001 -.678l-.018 -.168a5.03 5.03 0 0 1 -.021 -.824l.017 -.185l.019 -.12l-.108 -.024c-2.976 -.71 -4.703 -2.573 -4.875 -6.139l-.01 -.31l-.004 -.292a5.6 5.6 0 0 1 .908 -3.051l.152 -.222l.122 -.163l-.045 -.196a5.2 5.2 0 0 1 .145 -2.642l.1 -.282l.106 -.253a1 1 0 0 1 .529 -.514l.144 -.047l.154 -.03z" />
             </svg></a>
-        <a id="insta" href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+        <a id="insta" target="_blank" href="https://www.instagram.com/pedrinn.088/"><svg xmlns="https://www.instagram.com/pedrinn.088/" width="24" height="24" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="icon icon-tabler icons-tabler-outline icon-tabler-brand-instagram">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -46,13 +46,23 @@
     <section>
 
         <div id="cardAbout">
-            <ul>Pedro</ul>
-            <ul>Henrique</ul>
+            <img src="img/Image.jpeg" alt="Eu2">
+            <h3>Pedro Henrique</h3>
+            <ul>
+                <li>Desenvolvedor Front-End</li>
+                <li>São Paulo, SP</li>
+            </ul>
+            <div class="infoExtra">
+                <p>Sou apaixonado por tecnologia e desenvolvimento web. Busco evoluir constantemente na área de programação</p>
+            </div>
         </div>
+
+
         <div id="perfil">
             <h1>About Me</h1>
             
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia hic consectetur libero magnam omnis? Blanditiis autem animi cumque nostrum suscipit dicta, aspernatur hic atque nesciunt architecto nisi et ullam placeat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, aspernatur ullam! Iusto impedit enim maxime accusamus esse, minima amet eos ea debitis possimus accusantium facilis assumenda numquam perferendis recusandae fugit!</p>
+            <p>I’m Pedro Henrique Bento Severino, an 18-year-old student currently in the second semester of my Systems Analysis and Development degree. I’m passionate about technology and aspire to build a career in web development or database management.
+            At the moment, I’m gaining valuable experience as an intern at Trevisan Business School, a college based in São Paulo. In my role, I provide technical support to students, helping them resolve issues related to their classes and online platforms. I also make system adjustments and improvements to ensure a smooth user experience for the students and staff.</p>
         </div>
     </section>
     <footer>
