Melhorando e adicionando novas informações no meu portfolio pessoal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
+    <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,14 +57,12 @@
         <div class="cards">
 
             <div class="info">
-                <!-- <img src="img/about.jpg" alt="Sobre mim"> -->
                 <h1>About Me</h1>
                 <p>My name is Pedro Henrique Bento Severino, I’m 18 years old and currently pursuing a Bachelor’s degree in Systems Analysis and Development. I’m in my second semester and passionate about working as a web developer or database specialist in the future.
                 </p>
             </div>
 
             <div class="info">
-                <!-- <img src="img/skills.jpg" alt="Habilidades"> -->
                 <h1>My skills</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quia magnam eum. Veritatis iusto
                     praesentium adipisci pariatur, placeat voluptate, sit a quisquam delectus blanditiis maiores
@@ -73,7 +72,6 @@
             </div>
 
             <div class="info">
-                <!-- <img src="img/experience.webp" alt="Experiência"> -->
                 <h1>Experiences</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus iusto recusandae ratione earum
                     perspiciatis quam odio cum voluptatibus. Atque quasi enim, quod minus commodi facere inventore
@@ -82,7 +80,6 @@
             </div>
 
             <div class="info">
-                <!-- <img src="img/contato.jpg" alt="Redes"> -->
                 <h1>Contact Me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam reiciendis et assumenda eius minima
                     impedit corrupti ratione numquam aliquam est laudantium, velit quidem perspiciatis, placeat eaque
